# whisper-words

./: .gitignore  pyproject.toml
assets/: calibrated_model_benchmark_v01.joblib
literacy-screening-runtime/: .gitignore  Makefile
literacy-screening-runtime/examples/random/: main.py
literacy-screening-runtime/examples/transcription/: main.py
literacy-screening-runtime/runtime/: Dockerfile  Dockerfile-lock  apt.txt  pixi.toml
literacy-screening-runtime/runtime/tests/: test_packages.py
notebooks/: benchmark_xgboost.ipynb  compare2016.ipynb
