[project]
name = "whisper-words"
version = "1.8.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "jupyter-core>=5.7.2",
    "jupyter-events>=0.11.0",
    "jupyterlab>=4.3.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.1",
    "opensmile>=2.5.1",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
    "webrtcvad>=2.0.10",
    "xgboost==2.1.0",
]
